# 21sh

./: &1  CMakeLists.txt  Makefile  author  minishell
ft_printf/: CMakeLists.txt  Makefile  from_libft.c  ft_charjoin.c  ft_check_conver.c  ft_itoa.c  ft_printf.c  ft_printf.h  ft_strdup.c  ft_strlen.c  ft_turn_to_x.c  ft_un_itoa.c  ft_write_char.c  ft_write_int.c  ft_write_p.c  ft_write_str.c  ft_write_un_int.c  ft_write_x.c
ft_printf/includes/: ft_pft.h  ft_printf.h
ft_printf/src/: puts.c
headers/: get_next_line.h  minishell.h  structs.h
objs/builtins/: bltn_cd.d  bltn_echo.d  bltn_exit.d  bltn_export.d  bltn_pwd.d  bltn_setenv.d  bltn_unset.d
objs/env/: assemble_env.d  create_env_instance.d  get_env_var.d  init_env.d  parse_env_var.d  print_env.d  update_env.d
objs/exec/: check_redirs.d  exec.d  exec_loop.d
objs/main/: main.d
objs/parsing/: assemble_tokens_to_cmds.d  check_redir.d  parse_quotes.d  parse_token.d  parse_utils.d  push.d  validation.d
objs/path/: get_path.d  path_utils.d
objs/queue/: join_queue.d  pop.d  pop_front.d  push_back.d
objs/utils/: errors.d  free.d  ft_is_export.d  ft_is_sep_cmd.d  ft_isspace.d  ft_itoa.d  ft_malloc.d  ft_skip_spaces.d  ft_split.d  ft_strcmp.d  ft_strdup.d  ft_strequ.d  ft_strjoin_tripple.d  ft_strlen_shell.d  get_next_line.d  get_next_line_utils.d  init.d  show_promt.d  signals.d  two_d_array.d
srcs/builtins/: bltn_cd.c  bltn_echo.c  bltn_exit.c  bltn_export.c  bltn_pwd.c  bltn_setenv.c  bltn_unset.c
srcs/env/: assemble_env.c  create_env_instance.c  get_env_var.c  init_env.c  parse_env_var.c  print_env.c  (+1 more)
(+38 files in other folders)
